--- a/Serverside/package.json
+++ b/Serverside/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
-    "nodemailer": "^8.0.0"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
